<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ar.edu.utn.frsf.isi.dam.Actividad"
    tools:showIn="@layout/activity_actividad">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCuit"
        android:text="@string/cuit_default"
        android:layout_below="@+id/textViewCUIT"
        android:inputType="number"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculadora Plazo Fijo"
        android:id="@+id/textViewCalculadora"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo electronico"
        android:id="@+id/textViewEmail"
        android:layout_below="@+id/textViewCalculadora"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CUIT"
        android:id="@+id/textViewCUIT"
        android:layout_below="@+id/editTextMail"
        android:layout_alignStart="@+id/textViewImporte" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Importe"
        android:id="@+id/textViewImporte"
        android:layout_below="@+id/editTextCuit"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMontoDepositado"
        android:text="@string/monto_a_invertir_default"
        android:layout_below="@+id/textViewImporte"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextMail"
        android:layout_below="@+id/textViewEmail"
        android:layout_alignParentStart="true"
        android:text="@string/email_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cantidad de dias"
        android:id="@+id/textViewCantDeDias"
        android:layout_below="@+id/editTextMontoDepositado"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarPlazoFijo"
        android:layout_below="@+id/textViewCantDeDias"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewError"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rendimiento_default"
        android:id="@+id/textViewMontoRecibido"
        android:layout_gravity="bottom"
        android:layout_below="@+id/textViewCantDias"
        android:layout_alignStart="@+id/textViewImporte" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxPlazoFijoText"
        android:id="@+id/checkBoxRenovar"
        android:checked="true"
        android:layout_gravity="center|top"
        android:layout_below="@+id/textViewMontoRecibido"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonPlazoFijoText"
        android:id="@+id/botonPlazoFijo"
        android:layout_gravity="top"
        android:layout_below="@+id/checkBoxRenovar"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Plazo fijo realizado. Recibira 5000.0 al vencimiento!"
        android:id="@+id/textViewError"
        android:layout_below="@+id/botonPlazoFijo"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dias_seleccionados_default"
        android:id="@+id/textViewCantDias"
        android:layout_gravity="top"
        android:layout_below="@+id/seekBarPlazoFijo"
        android:layout_toEndOf="@+id/botonPlazoFijo" />

</RelativeLayout>
